--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 			<div class="container">
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
-						<h1>I&acute;m a 22 year old R&D specialist based <span>in</span> Cairo</h1>
-						<h2>and more</h2>
+						<h1>A computer engineer, R&D specialist and tech-lead based <span>in</span> Cairo</h1>
+						<h2>& more</h2>
 					</div>
 				</div>
 			</div>
@@ -121,9 +121,9 @@
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
-						<h2>Guide Landing Page</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
+						<h2>RobEn Club Website</h2>
+						<p>Published a fully fledged networking website for the RobEn Club for robotics</p>
+						<p><a href="https://roben.club/" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
 
