--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; 2016 Hold. All Rights Reserved. <br> Created by <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a> </small> </p>
+						<p><small>&copy; 2022 Karim Kohel. All Rights Reserved.</small> </p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="#"><i class="icon-twitter"></i></a>
@@ -218,10 +218,6 @@
 		</footer>
 
 	</div>
-	
-			
-	
-
 	</body>
 </html>
 
