added website and rovlib

--- a/index.html
+++ b/index.html
@@ -114,19 +114,16 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/work_1_large.jpg" alt="Free HTML5 Bootstrap Template">
-						</div>
-						<div class="img-holder-2 animate-box">
-							<img src="images/work_1_small.jpg" alt="Free HTML5 Bootstrap Template">
+							<img src="images/rovlib.png" alt="RobEn website image">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
-						<h2>RobEn Club Website</h2>
-						<p>Published a fully fledged networking website for the RobEn Club for robotics</p>
-						<p><a href="https://roben.club/" class="btn btn-light btn-outline transition">View Project</a></p>
+						<h2>ROV Library</h2>
+						<p>Built and published a python library specialized in controlling and monitoring Remote operated Underwater vehicles</p>
+						<p><a href="https://pypi.org/project/rovlib/" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
-
+				
 			</div>
 		</div>
 		<!-- data-colorbg="#FF6138" -->
@@ -135,16 +132,16 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/work_2_large.jpg" alt="Free HTML5 Bootstrap Template">
+							<img src="images/robenwebsite.png" alt="RobEn website image">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/work_2_small.jpg" alt="Free HTML5 Bootstrap Template">
+							<img src="images/robenwebsitesmall.png" alt="RobEn website image">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-						<h2>Sprint for Portfolio</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
+						<h2>RobEn Club Website</h2>
+						<p>Published a fully fledged networking website for the RobEn Club for robotics</p>
+						<p><a href="https://roben.club" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
 
