--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
-						<h2>ROV Library</h2>
-						<p>Built and published a python library specialized in controlling and monitoring Remote operated Underwater vehicles</p>
+						<h2>ROV System</h2>
+						<p>Built and published a python library specialized in controlling and monitoring Remote operated Underwater Vehicles</p>
 						<p><a href="https://pypi.org/project/rovlib/" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
