--- a/index.html
+++ b/index.html
@@ -114,16 +114,16 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/work_3_large.jpg" alt="Free HTML5 Bootstrap Template">
+							<img src="images/potato.PNG" alt="Free HTML5 Bootstrap Template">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/work_3_small.jpg" alt="Free HTML5 Bootstrap Template">
+							<img src="images/potatosmall.PNG" alt="Free HTML5 Bootstrap Template">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
-						<h2>Display for Business Website</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
+						<h2>AI Virtual Assistant</h2>
+						<p>Potato is a versatile and flexible JARVIS like assistant for personal use and automation that you can install right now</p>
+						<p><a href="https://github.com/karimkohel/potato" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
 
@@ -144,7 +144,7 @@
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
 						<h2>RobEn Club Website</h2>
-						<p>Published a fully fledged networking website for the RobEn Club for robotics</p>
+						<p>Published a fully fledged backend social networking website for the RobEn Club for robotics</p>
 						<p><a href="https://roben.club" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
@@ -195,10 +195,10 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; 2022 Karim Kohel. All Rights Reserved.</small> </p>
+						<p><small>&copy; 2023 Karim Kohel. All Rights Reserved.</small> </p>
 						<ul class="fh5co-social">
 							<li>
-								<a href="#"><i class="icon-twitter"></i></a>
+								<a href="#"><i class="icon-linkedin"></i></a>
 							</li>
 							<li>
 								<a href="#"><i class="icon-facebook"></i></a>
@@ -207,7 +207,7 @@
 								<a href="#"><i class="icon-instagram"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-dribbble"></i></a>
+								<a href="#"><i class="icon-github"></i></a>
 							</li>
 						</ul>
 					</div>
