--- a/index.html
+++ b/index.html
@@ -176,16 +176,13 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/work_4_large.jpg" alt="Free HTML5 Bootstrap Template">
-						</div>
-						<div class="img-holder-2 animate-box">
-							<img src="images/work_4_small.jpg" alt="Free HTML5 Bootstrap Template">
+							<img src="images/uav.jpg" alt="Free HTML5 Bootstrap Template">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
-						<h2>Slant for Creatives</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="work_1.html" class="btn btn-light btn-outline transition">View Project</a></p>
+						<h2>Unmanned Aerial Vehicle System</h2>
+						<p>Architected the entire software structure while leading the software engineering team for the UAV used by RoBen in the Military UAV competition 2021</p>
+						<p><a href="https://github.com/RobEn-AAST/AI-UAVC#ai-uavc" class="btn btn-light btn-outline transition">View Project</a></p>
 					</div>
 				</div>
 
