footer and connect links done in about

--- a/about.html
+++ b/about.html
@@ -150,19 +150,19 @@
 							<div class="col-md-9">
 								<ul class="fh5co-social fh5co-stack">
 									<li>
-										<a href="#"><i class="icon-mail2"></i> Send Email</a>
+										<a href="mailto:kareemkohel@gmail.com"><i class="icon-mail2"></i> Send Email</a>
 									</li>
 									<li>
-										<a href="#"><i class="icon-twitter"></i> Twitter</a>
+										<a href="https://www.linkedin.com/in/karimkohel/"><i class="icon-linkedin"></i> Linkedin</a>
 									</li>
 									<li>
-										<a href="#"><i class="icon-facebook"></i> Facebook</a>
+										<a href="https://www.facebook.com/karim.kohel"><i class="icon-facebook"></i> Facebook</a>
 									</li>
 									<li>
-										<a href="#"><i class="icon-instagram"></i> Instagram</a>
+										<a href="https://www.instagram.com/karimkohel"><i class="icon-instagram"></i> Instagram</a>
 									</li>
 									<li>
-										<a href="#"><i class="icon-dribbble"></i> Dribbble</a>
+										<a href="https://www.github.com/karimkohel"><i class="icon-github"></i> Github</a>
 									</li>
 									
 								</ul>
@@ -181,16 +181,19 @@
 						<p><small>&copy; 2022 Karim Kohel. All Rights Reserved.</small> </p>
 						<ul class="fh5co-social">
 							<li>
-								<a href="#"><i class="icon-twitter"></i></a>
+								<a href="mailto:kareemkohel@gmail.com"><i class="icon-mail2"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-facebook"></i></a>
+								<a href="https://www.linkedin.com/in/karimkohel/"><i class="icon-linkedin"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="https://www.facebook.com/karim.kohel"><i class="icon-facebook"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-dribbble"></i></a>
+								<a href="https://www.instagram.com/karimkohel"><i class="icon-instagram"></i></a>
+							</li>
+							<li>
+								<a href="https://www.github.com/karimkohel"><i class="icon-github"></i></a>
 							</li>
 						</ul>
 					</div>
