--- a/index.html
+++ b/index.html
@@ -195,16 +195,19 @@
 						<p><small>&copy; 2023 Karim Kohel. All Rights Reserved.</small> </p>
 						<ul class="fh5co-social">
 							<li>
-								<a href="#"><i class="icon-linkedin"></i></a>
+								<a href="mailto:kareemkohel@gmail.com"><i class="icon-mail2"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-facebook"></i></a>
+								<a href="https://www.linkedin.com/in/karimkohel/"><i class="icon-linkedin"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="https://www.facebook.com/karim.kohel"><i class="icon-facebook"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-github"></i></a>
+								<a href="https://www.instagram.com/karimkohel"><i class="icon-instagram"></i></a>
+							</li>
+							<li>
+								<a href="https://www.github.com/karimkohel"><i class="icon-github"></i></a>
 							</li>
 						</ul>
 					</div>
