--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 			<ul>
 				<li class="animate-box fh5co-active"><a href="index.html" class="transition">Home</a></li>
 				<li class="animate-box"><a href="about.html" class="transition">Bio</a></li>
+				<li class="animate-box"><a href="karimKohelResume.pdf" class="transition">Resume</a></li>
 			</ul>
 			<a class="style-toggle js-style-toggle" data-style="default" href="#">
 				<span class="fh5co-circle"></span>
@@ -114,10 +115,10 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/potato.PNG" alt="Free HTML5 Bootstrap Template">
+							<img src="images/potato.PNG" alt="project photo">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/potatosmall.PNG" alt="Free HTML5 Bootstrap Template">
+							<img src="images/potatosmall.PNG" alt="project photo">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
@@ -160,6 +161,9 @@
 						<div class="img-holder-1 animate-box">
 							<img src="images/rovlib.png" alt="RobEn website image">
 						</div>
+						<div class="img-holder-2 animate-box">
+							<img src="images/rov1.png" alt="project photo">
+						</div>
 					</div>
 					<div class="fh5co-text col-md-4 animate-box">
 						<h2>ROV System</h2>
@@ -176,7 +180,7 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/uav.jpg" alt="Free HTML5 Bootstrap Template">
+							<img src="images/uav.jpg" alt="project photo">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
