--- a/about.html
+++ b/about.html
@@ -86,6 +86,7 @@
 			<ul>
 				<li class="animate-box"><a href="index.html" class="transition">Home</a></li>
 				<li class="animate-box fh5co-active"><a href="about.html" class="transition">Bio</a></li>
+				<li class="animate-box"><a href="karimKohelResume.pdf" class="transition">Resume</a></li>
 			</ul>
 			<a class="style-toggle js-style-toggle" data-style="default" href="#">
 				<span class="fh5co-circle"></span>
@@ -119,8 +120,8 @@
 								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> Bio</h3>
 							</div>
 							<div class="col-md-9">
-								<p class="fh5co-lead">Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns.</p>
-								<p>Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns. Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns.</p>
+								<p class="fh5co-lead">Research and development is my main domain as designing software to run on a UAV or a ROUV is as exciting as it can get. Expert python and scripting skills come in handy when prototyping new inventions.</p>
+								<p>I dwell into every field possible out of excitement, you'd find great work done on embedded systems using micro-python and C/C++ on various micro-controllers and microcomputers as well as versatile full-stack web-development when needing to push a project online, devops experience to back it all up and of-course the most interesting of all, AI, machinelearning, deep learning projects and scientific publications</p>
 							</div>
 						</div>
 
