--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
 
 						<div class="row row-bottom-padded-sm animate-box">
 							<div class="col-md-12">
-								<figure class="fh5co-bio-photo"><img src="images/img.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template"></figure>
+								<figure class="fh5co-bio-photo"><img src="images/me.jpeg" class="img-responsive" alt="Free HTML5 Bootstrap Template"></figure>
 							</div>
 						</div>
 
@@ -138,7 +138,7 @@
 							</div>
 							<div class="col-md-9">
 								
-								<p class="fh5co-lead">Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns.</p>
+								<p class="fh5co-lead">Built a team of 40+ software engineers, developed open source python libraries, worked on UAV/ROV systems, embedded systems, image processing & AI, and the occasional website development.</p>
 								<p>Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns. Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns.</p>
 							</div>
 						</div>	
@@ -179,7 +179,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small>&copy; 2022 Karim Kohel. All Rights Reserved.</small> </p>
+						<p><small>&copy; 2023 Karim Kohel. All Rights Reserved.</small> </p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="mailto:kareemkohel@gmail.com"><i class="icon-mail2"></i></a>
