--- a/about.html
+++ b/about.html
@@ -137,9 +137,14 @@
 								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 2</span> Experience</h3>
 							</div>
 							<div class="col-md-9">
-								
-								<p class="fh5co-lead">Built a team of 40+ software engineers, developed open source python libraries, worked on UAV/ROV systems, embedded systems, image processing & AI, and the occasional website development.</p>
-								<p>Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns. Design is the creation of a plan or convention for the construction of an object or a system as in architectural blueprints, engineering drawings, business processes, circuit diagrams and sewing patterns.</p>
+								<p class="fh5co-lead">Tech-Lead</p>
+								<p>Built a team of 40+ software engineers, oversaw and developed 20+ major open-source scaled projects for automation, robotics and tooling, taught Python, image processing, networking, software design, hardware integration and linux for the team</p>
+								<p class="fh5co-lead">Research & Development Specialist</p>
+								<p>Specialized in researching and publishing new approaches for various already implemented software stacks in multimedia, networking and hardware architectures.</p>
+								<p class="fh5co-lead">Instructor</p>
+								<p>Taught advanced level courses in Python, Image Processing, Machine Learning/Deep Learning, Computer Networks, Software Design</p>
+								<p class="fh5co-lead">Back-end Engineer</p>
+								<p>Published 4 major websites and developed more for internal tooling, created databases and custom security measures for each project, Django, PostreSQL, Cloud.</p>
 							</div>
 						</div>	
 						
