--- a/about.html
+++ b/about.html
@@ -120,8 +120,8 @@
 								<h3 class="fh5co-section-heading"><span class="fh5co-number">N<sup>o</sup> 1</span> Bio</h3>
 							</div>
 							<div class="col-md-9">
-								<p class="fh5co-lead">Research and development is my main domain as designing software to run on a UAV or a ROUV is as exciting as it can get. Expert python and scripting skills come in handy when prototyping new inventions.</p>
-								<p>I dwell into every field possible out of excitement, you'd find great work done on embedded systems using micro-python and C/C++ on various micro-controllers and microcomputers as well as versatile full-stack web-development when needing to push a project online, devops experience to back it all up and of-course the most interesting of all, AI, machinelearning, deep learning projects and scientific publications</p>
+								<p class="fh5co-lead">Research & Development is my main domain, nothing beats inventing what you need, designing software to run on a UAV or a ROUV is as exciting as it can get. Expert python and scripting skills come in handy when prototyping new inventions.</p>
+								<p>I dwell into every field possible out of excitement, you'd find great work done on embedded systems using micro-python and C/C++ on various micro-controllers and microcomputers as well as versatile full-stack web-development when needing to push a project online, devops experience to back it all up and of-course the most interesting of all, AI, machinelearning, deep learning projects and scientific publications.</p>
 							</div>
 						</div>
 
@@ -138,11 +138,11 @@
 							</div>
 							<div class="col-md-9">
 								<p class="fh5co-lead">Tech-Lead</p>
-								<p>Built a team of 40+ software engineers, oversaw and developed 20+ major open-source scaled projects for automation, robotics and tooling, taught Python, image processing, networking, software design, hardware integration and linux for the team</p>
+								<p>Built a team of 40+ software engineers, oversaw and developed 20+ major open-source scaled projects for automation, robotics and tooling, taught Python, image processing, networking, software design, hardware integration and linux for the team.</p>
 								<p class="fh5co-lead">Research & Development Specialist</p>
-								<p>Specialized in researching and publishing new approaches for various already implemented software stacks in multimedia, networking and hardware architectures.</p>
+								<p>Specialized in researching and publishing new approaches for various already implemented software stacks in multimedia, networking and hardware architectures, building python packages.</p>
 								<p class="fh5co-lead">Instructor</p>
-								<p>Taught advanced level courses in Python, Image Processing, Machine Learning/Deep Learning, Computer Networks, Software Design</p>
+								<p>Taught advanced level courses in Python, Image Processing, Machine Learning/Deep Learning, Computer Networks, Software Design.</p>
 								<p class="fh5co-lead">Back-end Engineer</p>
 								<p>Published 4 major websites and developed more for internal tooling, created databases and custom security measures for each project, Django, PostreSQL, Cloud.</p>
 							</div>
